--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.2",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "pg-format": "^1.0.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/pg": "^8.11.0"
+    "@types/pg": "^8.11.0",
+    "@types/pg-format": "^1.0.5"
   }
 }
